--- a/styles.css
+++ b/styles.css
@@ -7,21 +7,24 @@
   border: solid 1px black;
   display: flex;
   flex-direction: column;
+  align-content: space-evenly;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .calcu-display {
   width: 450px;
   height: 200px;
   border: solid 1px black;
-  margin: 25px;
+  /*margin: 25px;*/
 }
 
 .num-container {
   display: flex;
-  margin: 0 25px 25px 25px;
-  width: 450px;
+  margin: 0 18px 0px 18px;
+
   height: 325px;
-  border: solid 1px black;
+  /*border: solid 1px black;*/
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
@@ -29,6 +32,6 @@
 }
 
 button {
-  width: 100px;
+  width: 105px;
   height: 65px;
 }
