--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,28 @@ button {
 .numZero {
   flex-grow: 3;
 }
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  background-color: white;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+}
+
+.close-modal {
+  font-size: 35px;
+  padding: 0;
+  justify-content: end;
+  color: #333;
+  background: none;
+  border: none;
+}
