--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,22 @@ button {
   width: 35px;
   display: flex;
   position: absolute;
-  top: 1rem;
+
   right: 2rem;
   color: #333;
   background: none;
   border: none;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: right;
+  padding: 0;
+}
+
+.clear,
+.cancel {
+  width: 70px;
+  height: 50px;
+  border-radius: 5px;
 }
