Center the calculator vertically and horizontally

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 * {
   box-sizing: border-box;
 }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
 .calcu-body {
   width: 500px;
   height: 600px;
@@ -65,10 +71,10 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 40%;
 
   padding: 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   background-color: white;
   z-index: 10;
