--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,8 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 40%;
+  width: 30%;
+  height: 300px;
 
   padding: 20px;
   text-align: center;
@@ -85,7 +86,7 @@ button {
   z-index: 10;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .close-cont {
   display: flex;
