--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ button {
   width: 30%;
   height: 300px;
 
-  padding: 20px;
+  padding: 40px;
   text-align: center;
   border-radius: 10px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
@@ -98,15 +98,23 @@ button {
   display: flex;
   justify-content: center;
   padding: 0;
+  gap: 20px;
 }
 
 .yes,
 .cancel {
-  width: 70px;
+  width: 100px;
   height: 50px;
   border-radius: 5px;
+  border: none;
+  color: white;
 }
-
+.yes {
+  background-color: rgb(5, 226, 5);
+}
+.cancel {
+  background-color: red;
+}
 .error-msg {
   font-size: 25px;
 }
@@ -114,4 +122,8 @@ button {
 h2,
 p {
   margin: 10px 0;
+}
+
+.modal p {
+  font-size: 20px;
 }
