--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 body {
+  font-family: "Roboto", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -75,7 +76,7 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 30%;
+  width: 400px;
   height: 300px;
 
   padding: 40px;
@@ -108,6 +109,8 @@ button {
   border-radius: 5px;
   border: none;
   color: white;
+  font-family: "Roboto", sans-serif;
+  font-style: regular;
 }
 .yes {
   background-color: rgb(5, 226, 5);
