--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ button {
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
+  cursor: pointer;
 }
 .yes {
   background-color: rgb(5, 226, 5);
