--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ button {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .modal {
@@ -82,6 +82,9 @@ button {
   transform: translate(-50%, -50%);
   width: 400px;
   height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 
   padding: 40px;
   text-align: center;
@@ -89,9 +92,6 @@ button {
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   background-color: white;
   z-index: 10;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
 }
 
 .overlay {
@@ -103,11 +103,6 @@ button {
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(1px);
   z-index: 5;
-}
-.close-cont {
-  display: flex;
-  justify-content: right;
-  align-items: center;
 }
 
 .modal-buttons {
